[tool.poetry]
name = "jke-utilities"
version = "0.1.0"
description = "Collection of reusable functions written by Jack Kolberg-Edelbrock"
authors = ["Jack Kolberg-Edelbrock <jack.edelbrock@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jke_utilities"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
